--- a/index.html
+++ b/index.html
@@ -82,8 +82,18 @@
   <label>
     Difficulty:
     <select id="difficulty">
-      <!-- 1 to 10 options -->
-      ${[...Array(10)].map((_, i) => `<option value="${i + 1}">${i + 1}</option>`).join('')}
+      <select id="difficulty">
+  <option value="1">1</option>
+  <option value="2">2</option>
+  <option value="3">3</option>
+  <option value="4">4</option>
+  <option value="5">5</option>
+  <option value="6" selected>6</option>
+  <option value="7">7</option>
+  <option value="8">8</option>
+  <option value="9">9</option>
+  <option value="10">10</option>
+</select>
     </select>
   </label>
 
